# snapforge-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  pyproject.toml
src/snapforge/: auth.py  config.py  db.py  main.py  mcp_server.py  session.py
src/snapforge/routers/: admin.py  billing.py  dashboard.py  image.py  og_image.py  pdf.py  qrcode.py  screenshot.py  user_auth.py
src/snapforge/services/: browser.py  email.py  image_processor.py  og.py  qr.py
src/snapforge/templates/: landing.html  privacy.html  refund.html  terms.html
